[package]
name = "rss-to-lametric"
version = "1.0.3-alpha.0"
authors = ["François-Guillaume RIBREAU <github@fgribreau.com>"]
homepage = "https://github.com/FGRibreau/rss-to-lametric"
repository = "https://github.com/FGRibreau/rss-to-lametric"
readme = "README.md"
documentation = "https://docs.rs/rss-to-lametric"
description = "🛫 Fastest way to expose a RSS feed to your LaMetric - http://bit.ly/2zcEaTz 🎩"
keywords = ["rss", "lametric"]
categories = ["web-programming"]
license = "MIT"

[package.metadata.release]
# cargo install cargo-release
# cargo release --dry-run
upload-doc = true
pre-release-commit-message = "Release {{version}} 🎉🎉"
pre-release-replacements = [ {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"} , {file ="Cargo.toml", search="branch=\"[a-z0-9\\.-]+\"", replace="branch=\"{{version}}\""} ]


[dependencies]
lazy_static = "0.2"
rocket = "0.4.0"
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
reqwest = "0.9.5"
feed-rs= "0.1.3"
lru_time_cache = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
