[package]
name = "rss-to-lametric"
version = "1.0.3-alpha.0"
authors = ["François-Guillaume RIBREAU <github@fgribreau.com>"]
homepage = "https://github.com/FGRibreau/rss-to-lametric"
repository = "https://github.com/FGRibreau/rss-to-lametric"
readme = "README.md"
documentation = "https://docs.rs/rss-to-lametric"
description = "🛫 Fastest way to expose a RSS feed to your LaMetric - http://bit.ly/2zcEaTz 🎩"
keywords = ["rss", "lametric"]
categories = ["web-programming"]
license = "MIT"
edition = "2018"

[package.metadata.release]
# cargo install cargo-release
# cargo release --dry-run
upload-doc = true
pre-release-commit-message = "Release {{version}} 🎉🎉"
pre-release-replacements = [ {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"} , {file ="Cargo.toml", search="branch=\"[a-z0-9\\.-]+\"", replace="branch=\"{{version}}\""} ]

[dependencies]
actix-rt = "1.1.1"
lazy_static = "1.4.0"
serde = "1.0.110"
serde_json = "1.0.53"
serde_derive = "1.0.110"
reqwest = "0.9.5"
feed-rs= "0.1.3"
lru_time_cache = "0.11.11"
actix-web = "3.3.2"
color-eyre = "0.5.10"
log = "0.4.8"
pretty_env_logger = "0.4.0"


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

# Improving perf on debug builds
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
panic = "abort"
