[package]
name = "rss-to-lametric"
version = "2.0.0"
authors = ["François-Guillaume RIBREAU <github@fgribreau.com>"]
homepage = "https://github.com/FGRibreau/rss-to-lametric"
repository = "https://github.com/FGRibreau/rss-to-lametric"
readme = "README.md"
documentation = "https://docs.rs/rss-to-lametric"
description = "🛫 Fastest way to expose a RSS feed to your LaMetric - https://store.lametric.com/?rfsn=853404.8b38b6 🎩"
keywords = ["rss", "lametric"]
categories = ["web-programming"]
license = "MIT"
edition = "2018"

[package.metadata.release]
# cargo install cargo-release
# cargo release --dry-run
pre-release-commit-message = "Release {{version}} 🎉🎉"

[dependencies]
actix-rt = "2.7.0"
lazy_static = "1.4.0"
serde = "1.0.151"
serde_json = "1.0.53"
serde_derive = "1.0.110"
reqwest = "0.9.24"
actix-web = "4.2.1"
color-eyre = "0.6"
log = "0.4.17"
pretty_env_logger = "0.4.0"
cached = { version = "0.41.0", features = ["async_tokio_rt_multi_thread"] }
feed-rs = "1.2.0"


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

# Improving perf on debug builds
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
panic = "abort"

[features]
